# japanmap

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml
japanmap/: __init__.py  japan.pkl  japan0.16.pkl
src/japanmap/: __init__.py  japan.json  japan0.16.json
src/tests/: test_map.py
