[tool.poetry]
authors = ["SaitoTsutomu <tsutomu7@hotmail.co.jp>"]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
]
description = "`japanmap` is a package for Japanese map."
homepage = "https://github.com/SaitoTsutomu/japanmap"
include = ['japan.pkl', 'japan0.16.pkl', 'japan.png']
license = "Apache-2.0"
name = "japanmap"
readme = "README.rst"
version = "0.3.1"

[tool.poetry.dependencies]
opencv-python = "^4.9"
pillow = "^10.2"
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.12"
flake8 = "^7.0"
isort = "^5.13"
jupyterlab = "^4.0"
matplotlib = "^3.8"
mypy = "^1.8"
pytest = "^7.4"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
