[project]
authors = [{name = "Saito Tsutomu", email = "tsutomu7@hotmail.co.jp"}]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "opencv-python>=4.10.0.84",
  "pillow>=11.1.0",
]
description = "`japanmap` is a package for Japanese map."
include = ['japan.json', 'japan0.16.json', 'japan.png']
license = {text = "Apache-2.0"}
name = "japanmap"
readme = "README.md"
requires-python = ">=3.11"
version = "0.6.0"

[project.urls]
homepage = "https://github.com/SaitoTsutomu/japanmap"

[tool.uv]
dev-dependencies = [
  "jupyterlab>=4.3.4",
  "matplotlib>=3.10.0",
  "networkx>=3.4.2",
  "openpyxl>=3.1.5",
  "pandas>=2.2.3",
  "pytest>=8.3.4",
]

[tool.mypy]
files = "src"
ignore_missing_imports = true

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
ignore = ["ANN001", "ANN20", "CPY", "D1", "D2", "D4", "DOC201", "DOC501", "E501", "PLR0913", "PLR0917"]
preview = true
select = ["ALL"]
[tool.ruff.lint.mccabe]
max-complexity = 10

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
